# ci_info

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
benches/: bench_get.rs  bench_is_ci.rs
docs/: index.html
docs/api/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/api/ci_info/: all.html  fn.get.html  fn.is_ci.html  fn.mock_ci.html  index.html  is_ci.v.html  sidebar-items.js
docs/api/ci_info/types/: CiInfo.t.html  enum.Vendor.html  index.html  sidebar-items.js  struct.CiInfo.html
docs/api/implementors/core/clone/: trait.Clone.js
docs/api/implementors/core/cmp/: trait.PartialEq.js
docs/api/implementors/core/default/: trait.Default.js
docs/api/implementors/core/fmt/: trait.Debug.js
docs/api/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/search.desc/ci_info/: ci_info-desc-0-.js
docs/api/src/ci_info/: ci.rs.html  config.rs.html  env.rs.html  lib.rs.html  mock.rs.html  types.rs.html
docs/api/trait.impl/core/clone/: trait.Clone.js
docs/api/trait.impl/core/cmp/: trait.PartialEq.js
docs/api/trait.impl/core/default/: trait.Default.js
docs/api/trait.impl/core/fmt/: trait.Debug.js
docs/api/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/api/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
examples/: example.rs  get.rs  iterate_vendors.rs  mock.rs
src/: ci.rs  ci_test.rs  config.rs  config_test.rs  env.rs  env_test.rs  lib.rs  lib_test.rs  mock.rs  test_env.rs  types.rs  types_test.rs  vendors_test.rs
tests/: get_test.rs  is_ci_test.rs  iter_test.rs  mock_ci_test.rs  test_is_ci.rs
