[package]
name = "ci_info"
version = "0.10.0"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Provides current CI environment information."
license = "Apache-2.0"
edition = "2018"
documentation = "https://sagiegurari.github.io/ci_info/api/ci_info/index.html"
homepage = "http://github.com/sagiegurari/ci_info"
repository = "https://github.com/sagiegurari/ci_info.git"
readme = "README.md"
keywords = ["ci", "build"]
categories = ["development-tools", "development-tools::build-utils", "development-tools::testing"]
include = [
    "/benches/*",
    "/docs/*",
    "/examples/*",
    "/src/*",
    "/tests/*",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/Makefile.toml"
]

[dependencies]
envmnt = "^0.8"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[dev-dependencies]
doc-comment = "^0.3"
lazy_static = "^1"
rusty-hook = "^0.10"

[features]
serde-1 = [ "serde", "serde_derive" ]

[badges.codecov]
branch = "master"
repository = "sagiegurari/ci_info"
service = "github"
